# ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-study-reminder.yml
concepts/: README.md
concepts/math/: derivatives.ipynb
notes/: learning_backlog.md
projects/: README.md
scripts/: setup.sh
src/ai_lab/: __init__.py  reproducibility.py
tests/: test_reproducibility.py
